--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
+    "react-is": "^19.2.0",
     "react-router": "^7.4.1",
+    "recharts": "^3.2.1",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.1"
   },
@@ -42,6 +44,7 @@
     "@types/node": "^22.15.30",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/react-is": "^19",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
     "eslint-config-prettier": "^10.1.1",
@@ -57,7 +60,7 @@
     "tw-animate-css": "^1.3.4",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
+    "vite": "^7.1.9"
   },
   "lint-staged": {
     "**/*.{ts,tsx,js,jsx}": [
