added animation for background

--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
     "@tailwindcss/vite": "^4.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "echarts": "^6.0.0",
+    "echarts-for-react": "3.0.2",
+    "echarts-gl": "^2.0.9",
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.513.0",
+    "ogl": "^1.0.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
