--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tw-animate-css": "^1.3.4",
-    "typescript": "~5.7.2",
+    "typescript": "5.6.3",
     "typescript-eslint": "^8.24.1",
     "vite": "^7.1.9"
   },
@@ -74,6 +74,5 @@
     "**/*.{json,md,css}": [
       "prettier --write"
     ]
-  },
-  "packageManager": "yarn@4.9.2"
+  }
 }
